<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/userDetailsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/user_details"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/panNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/pan_number_abcde1234f"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dateOfBirthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth_03_12_1998"
        android:textSize="18sp" />

</LinearLayout>
